--- a/lib/js-dom.html
+++ b/lib/js-dom.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript and the DOM Lab</title>
 </head>
 <body>
-    <p id='p4'></p>
-    <p id='p4'></p>
+    <p id='p1'>Developers for life!</p>
+    <p id='p1'></p>
+
+<script src="main.js"></script>
 </body>
 </html>
