Added Picture to webpage

--- a/lib/js-dom.html
+++ b/lib/js-dom.html
@@ -8,6 +8,9 @@
 <body>
     <p id='p1'>Developers for life!</p>
     <p id='p1'></p>
+    <img src="klematis.jpg" alt="flower" width="150" height="113">
+    <button onclick="myFunction()">Click the Button by the Picture</button>
+
 
 <script src="main.js"></script>
 </body>
