Third changes with picture and button

--- a/lib/js-dom.html
+++ b/lib/js-dom.html
@@ -6,10 +6,12 @@
     <title>JavaScript and the DOM Lab</title>
 </head>
 <body>
-    <p id='p1'>Developers for life!</p>
+
+    <p style="font-size:40px color:blue">Developers for Life!</p>
     <p id='p1'></p>
-    <img src="klematis.jpg" alt="flower" width="150" height="113">
+    <img src="http://placeimg.com/40/40/animals" >
     <button onclick="myFunction()">Click the Button by the Picture</button>
+
 
 
 <script src="main.js"></script>
